2004-08-17  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/job.c(job_accept): Tweaked log messages.

	* src/libcommon/munge_defs.h: Changed MUNGE_THREADS from 4 to 2.

2004-08-11  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with automake-1.9.

	* src/munged/work.c(work_fini):
	  Fixed bug preventing the worker thread(s) from being canceled.

2004-08-05  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/timer.c(timer_fini):
	  Changed assert of pthread_join() rc to an explicit test.
	  Reset timer_tid after timer thread has been joined.

	* src/libcommon/munge_defs.h, src/munged/conf.c, src/munged/conf.h,
	  src/munged/job.c, src/munged/job.h, src/munged/work.c,
	  src/munged/work.h:
	  Added support for thread work crew to process credential requests.
	* src/munged/munged.c, src/munged/sock.c, src/munged/sock.h:
	  Moved munge_sock_create() & munge_sock_destroy() to munged.c.
	  Moved munge_sock_accept() to job.c:job_accept().
	* src/munged/msg_server.c, src/munged/msg_server.h,
	  src/munged/dec_v1.c, src/munged/enc_v1.c:
	  Moved munge_msg_server_thread() to job.c:_job_exec().
	  Moved err_v1_response() to job.c:job_error().

2004-07-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/auth_recv.c: Fixed bug in MUNGE_AUTH_RECVFD_MKNOD codepath
	  causing an auth pipe fd leak resulting in poor performance on aix.

2004-07-21  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/sock.c, src/munged/timer.c:
	  Set pthread stacksize to 256KB (to appease ia64).

2004-06-15  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c, src/munged/munged.c:
	  Moved auth_recv_init(), replay_init(), replay_fini(),
	  gids_create(), and gids_destroy() from create_conf() to main().

2004-06-11  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/sock.c, src/munged/timer.c: Set pthread stacksize to 64KB.

2004-06-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge.h: Added support for C++.

2004-05-26  Chris Dunlap  <cdunlap@llnl.gov>
